...

enum class NavDestination(
    @DrawableRes val iconRes: Int,
    val label: String,
    val iconSize: Dp = 20.dp
) {
    Home(R.drawable.home_icon, "Home", iconSize = 21.dp),
    Movies(R.drawable.movies_icon, "Movies"),
    Series(R.drawable.series_icon, "Series"),
    Ott(R.drawable.ott_icon, "OTT"),
    Watchlist(R.drawable.watchlist_icon, "My Library"),
    Search(R.drawable.search_icon, "Search"),
    Profile(R.drawable.profile_icon, "Profile", iconSize = 18.dp),
    Settings(R.drawable.settings_icon, "Settings"),
    Exit(R.drawable.exit_icon, "Exit", iconSize = 21.dp)
}

@Composable
fun NavDrawer(
    currentDestination: NavDestination,
    currentProfile: ProfileEntity?,
...
