...

private val TMDB_LANGUAGE_OPTIONS: List<Pair<String, String>> = listOf(
    "Device Language" to "",
    "English" to "en",
    "Spanish" to "es",
    "Spanish (Latin America)" to "es-419",
    "French" to "fr",
    "German" to "de",
    "Italian" to "it",
    "Portuguese" to "pt",
    "Portuguese (Brazil)" to "pt-BR",
    "Russian" to "ru",
    "Japanese" to "ja",
...
    "Irish" to "ga",
    "Kannada" to "kn",
    "Kazakh" to "kk",
    "Latvian" to "lv",
    "Lithuanian" to "lt",
    "Macedonian" to "mk",
    "Malayalam" to "ml",
    "Mongolian" to "mn",
    "Slovenian" to "sl",
    "Swahili" to "sw",
    "Urdu" to "ur"
)

...
